# romaji

./: .gitmodules  Cargo.toml
ipadic/: update_ipadic.sh
src/: lib.rs
